# testjob_naymium

./: README.md  pyproject.toml
company/conf/: settings.py  urls.py
company/main/: admin.py  models.py  urls.py
company/main/api/: urls.py
company/main/api/v1/: filters.py  serializers.py  urls.py  views.py
company/main/migrations/: 0001_initial.py  0002_alter_employee_photo.py
