[tool.poetry]
name = "testjob_naymium"
version = "0.1.0"
description = ""
authors = ["Aleksandr <lvar-8@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
Pillow = "^8.4.0"
djangorestframework = "^3.12.4"
django-filter = "^21.1"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
